assets/css/main.css
/* ... */
.vg-about-extended-info__column:last-child {
  text-align: justify;
}

.vg-about-extended-info__column .vg-about-skills {
  padding-top: 8px;
}

.vg-about-extended-info-tabs {
  display: flex;
  justify-content: space-between;
  position: relative;
  width: 100%;
  border: 1px solid var(--background-color-dark);
  border-right: 0;
}

.vg-about-extended-info-tabs__tab {
  display: block;
  width: 100%;
  padding: 10px 0;
  flex: 1;
  border-right: 1px solid var(--background-color-dark);
  font-family: var(--secondary-font);
  font-size: 20px;
  cursor: pointer;
  text-align: center;
}

.vg-about-extended-info-tabs__tab_active {
  background: var(--background-color-dark);
  color: var(--background-color-light);
}

.vg-about-extended-info-tabs__content {
  display: none;
}

.vg-about-extended-info-tabs__content_active {
  display: block;
}

.vg-about-extended-info-tabs__content ul {
  padding-left: 16px;
}

.vg-about-extended-info-tabs__content li {
  padding: 8px 0;
}

@media (max-width: 768px) {
  .vg-about-info {
    flex-direction: column;
    gap: 20px;
  }

  .vg-about-info__column:last-child {
    padding: 0;
  }

  .vg-about-extended-info {
    flex-direction: column-reverse;
    gap: 20px;
  }

  .vg-about-extended-info__column .vg-about-skills {
    padding-top: 0;
  }
}
/* END ABOUT */

/* CATEGORIES */
.vg-categories {
  display: flex;
  padding-top: 50px;
  position: relative;
}

.vg-categories-list {
  display: flex;
  flex-direction: column;
  gap: 40px;
  position: relative;
  width: 100%;
  min-height: calc(100vh - 250px);
  background: var(--background-color-light);
  transition: width 0.4s;
  z-index: 1;
}

.vg-categories-list_open {
  width: 60%;
}

.vg-categories-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
  width: 100%;
  height: 65px;
  position: relative;
  z-index: 1;
}

.vg-categories-row:hover {
  font-weight: 700;
  text-decoration: none;
}

.vg-categories-row:hover .vg-categories-row__button {
  background: var(--background-color-dark);
  color: var(--background-color-light);
}

.vg-categories-row__title {
  font-size: 24px;
  color: var(--main-color);
  line-height: 1.6;
  letter-spacing: 1.2px;
}

.vg-categories-row__button {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  padding: 0 30px;
  background: var(--main-color);
  color: var(--background-color-light);
  font-family: var(--secondary-font);
  font-size: 24px;
  font-weight: 700;
  letter-spacing: 1.2px;
  white-space: nowrap;
}

.vg-categories-row_selected {
  font-weight: 700;
}

.vg-categories-row_selected .vg-categories-row__button {
  background: var(--background-color-dark);
  color: var(--background-color-light);
}

.vg-categories-posts-list-wrapper {
  position: absolute;
  top: 50px;
  right: 0;
  bottom: 0;
  width: 40%;
}

.vg-categories-posts-list {
  display: none;
  position: sticky;
  top: 15px;
  flex-direction: column;
  gap: 40px;
  padding-left: 40px;
  box-sizing: border-box;
}

.vg-categories-posts-list_selected {
  display: flex;
}

.vg-categories-posts-list .vg-categories-list__item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
  height: 65px;
  font-size: 24px;
  letter-spacing: 1.2px;
  color: var(--main-color);
  line-height: 1.2;
}

.vg-categories-list__item img {
  width: 100px;
}
/* END CATEGORIES */

/* TAGS LIST */
.vg-tags-list {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 30px;
  padding: 50px 0;
}

.vg-tags-list-item {
  flex: 1;
  padding: 22px;
  border: 1px solid var(--main-color);
  font-family: var(--secondary-font);
  font-size: 24px;
  font-weight: 700;
  color: var(--main-color);
  text-align: center;
}

.vg-tags-list-item:hover {
  box-shadow: 0 0 10px rgba(0, 0, 0, .5);
  text-decoration: none;
}

.vg-tags-list-item_active {
  background: var(--background-color-dark);
  color: var(--background-color-light);
}
/* END TAGS LIST */

